--- a/css/main.css
+++ b/css/main.css
@@ -319,6 +319,28 @@ body {
 	margin: 0 auto;
 }
 
+.sessaoInterna .container {
+	position: relative;
+	z-index: 2;
+}
+
+.sessaoInterna {
+	position: relative;
+	z-index: 1;
+}
+
+.sessaoInterna:before {
+	content: "";
+	display: block;
+	width: 100%;
+	height: 318px;
+	background: #e9e0d2;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 1;
+}
+
 .sessaoTitulo {
 	display: inline-block;
 	margin-bottom: 60px;
@@ -369,6 +391,10 @@ body {
 	padding: 10px 5px 0;
 }
 
+.sessaoInterna .sessaoTitulo {
+	margin: 120px auto 70px auto;
+}
+
 .sessaoDescricao {
 	max-width: 630px;
 	margin: 0 auto;
@@ -391,6 +417,11 @@ body {
 /* ====================
    TOPO
    ==================== */
+#topo {
+	position: relative;
+	z-index: 2;
+}
+
 #menu {
 	padding-top: 60px;
 }
