--- a/css/main.css
+++ b/css/main.css
@@ -333,7 +333,7 @@ body {
 	content: "";
 	display: block;
 	width: 100%;
-	height: 318px;
+	height: 240px;
 	background: #e9e0d2;
 	position: absolute;
 	top: 0;
@@ -675,7 +675,7 @@ body {
 }
 
 #modalLojasVirtuais .lojaTitulo {
-	font-family: 'droid_serifbold_italic';
+	font-family: 'droid_serifbold_italic', arial, sans-serif;
 	font-size: 16px;
 }
 
