--- a/css/inicial.css
+++ b/css/inicial.css
@@ -76,9 +76,28 @@
 #produtosUl .produtosLink {
 	display: block;
 	position: relative;
-	width: 327px;
+	width: 335px;
 	background: #FFF;
-	padding: 4px;
+}
+
+#produtosUl .produtosLink:before {
+	border: 4px solid transparent;
+	content: "";
+	display: block;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	z-index: 1;
+	-moz-transition: all .3s;
+	-webkit-transition: all .3s;
+	-o-transition: all .3s;
+	transition: all .3s;
+}
+
+#produtosUl .produtosLink:hover:before {
+	border-color: #FFF;
 }
 
 .produtoImagem {
